styles.css
#background_image{
    background-image: url("background_image.jpg");
    margin:0px;

}
.header {
    background-color:rgb(249, 173, 74);
    padding:15px;
    
    
}
.header a{
   margin-left: 20px;
   color:black;
   background-color: magenta;
   color: white;
   padding:9px;
   border-radius: 22px;
   text-align: center;
   text-decoration: none;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size:15px;

}
.header a:hover{
    background-color: rgb(178, 12, 178);
}

.header-right{
    float :right;
}
a[ href="#default4"]:hover{
    background-color: darkgreen;

}
.header-right a{
    background-color:rgb(11, 125, 11);
    color:white;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size:15px;
    padding:8px;
}
.claculator-display{
    border:1px  solid black;
    border-radius:8px;
    background-color: chocolate;
    width: 450px;
    height:500px;
    padding:12px;
    display:inline-block;
    
}
.select-inputs1 ,.select-inputs2{
    padding:5px;
    border-radius:5px;
    width:180px;
    display:inline-block;
}
#Input-Number{
    width:400px;
    padding:10px;
    border-radius: 5px;
}

#Button{
    display: inline-block;
    margin-left:150px;
   
   
}
#reset {
    margin-left: 30px;
    padding:6px;
    width:70px;
    font-size:15px;
    border-radius:5px;
    background-color: rgb(16, 105, 178);
    color:white;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    border:0px white;
    display:inline-block;
}

#convert{
    padding: 6px;
    width:70px;
    font-size:15px;
    border-radius:5px;
    background-color: rgb(16, 105, 178);
    color:white;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    border:0px white;
}


#side-scroll-bar{
    margin:0px;
    width: 220px;
    display:inline-block;
    background-color: white;
    height: 600px;
    overflow: auto; 
}
#side-scroll-bar{
    background-color: rgb(21,32,43);
}
#side-scroll-bar a{
    color:white;
    text-decoration: none;
    font-size: 14px;
    font-family: "Segoe UI",Arial,sans-serif;
    margin-left:5px;
    display : block;
    margin-bottom: 3px;
}
#side-scroll-bar a:hover{
    background-color: rgb(103, 103, 103);
}
#Output{
    

}

#output{
    display:inline-block;
    width:425px;
    
}
.claculator-display label{
    font-size:18px;
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', Geneva, Verdana, sans-serif
}

